--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,21 +1,22 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#ffb733",
-        "activityBar.activeBorder": "#008053",
-        "activityBar.background": "#ffb733",
-        "activityBar.foreground": "#15202b",
-        "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#008053",
+        "activityBar.activeBackground": "#2f7c47",
+        "activityBar.activeBorder": "#422c74",
+        "activityBar.background": "#2f7c47",
+        "activityBar.foreground": "#e7e7e7",
+        "activityBar.inactiveForeground": "#e7e7e799",
+        "activityBarBadge.background": "#422c74",
         "activityBarBadge.foreground": "#e7e7e7",
-        "sash.hoverBorder": "#ffb733",
-        "statusBar.background": "#ffa500",
-        "statusBar.foreground": "#15202b",
-        "statusBarItem.hoverBackground": "#cc8400",
-        "statusBarItem.remoteBackground": "#ffa500",
-        "statusBarItem.remoteForeground": "#15202b",
-        "titleBar.activeBackground": "#ffa500",
-        "titleBar.activeForeground": "#15202b",
-        "titleBar.inactiveBackground": "#ffa50099",
-        "titleBar.inactiveForeground": "#15202b99"
-    }
+        "sash.hoverBorder": "#2f7c47",
+        "statusBar.background": "#215732",
+        "statusBar.foreground": "#e7e7e7",
+        "statusBarItem.hoverBackground": "#2f7c47",
+        "statusBarItem.remoteBackground": "#215732",
+        "statusBarItem.remoteForeground": "#e7e7e7",
+        "titleBar.activeBackground": "#215732",
+        "titleBar.activeForeground": "#e7e7e7",
+        "titleBar.inactiveBackground": "#21573299",
+        "titleBar.inactiveForeground": "#e7e7e799"
+    },
+    "peacock.color": "#215732"
 }
